--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   # share image from url
   http: ^0.13.4
   path_provider: "^2.0.3"
+  excel: 2.0.0-null-safety-3
+  csv: ^5.0.1
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +88,7 @@ flutter:
   assets:
    - assets/logos/facebook.jpg
    - assets/logos/google.jpg
+   - assets/doc/excel.xlsx
 
 
   fonts:
