--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   excel: 2.0.0-null-safety-3
   csv: ^5.0.1
   fluttertoast: ^8.0.8
+  collection: ^1.15.0
+  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_test:
